# project-toolkit

./: .gitignore  .gitmodules  pyproject.toml
src/project_toolkit/: cli.py
src/project_toolkit/core/: updater.py
src/project_toolkit/templates/cpp-template/: .gitignore  CMakeLists.txt  README.md
src/project_toolkit/templates/cpp-template/.cmake/: mingw-x86_64.cmake
src/project_toolkit/templates/cpp-template/.github/workflows/: build-windows.yml
src/project_toolkit/templates/cpp-template/.scripts/: build.ps1  initialize-project.ps1  setup-environment.ps1
src/project_toolkit/templates/cpp-template/include/: header.h
src/project_toolkit/templates/cpp-template/lib/fakelib/: CMakeLists.txt
src/project_toolkit/templates/cpp-template/lib/fakelib/src/: fakelib.cpp
src/project_toolkit/templates/cpp-template/src/: header.cpp  main.cpp
